# search_vacancy_with_SQL

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: data.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_api_py.html  z_145eef247bfb46b6_base_db_py.html  z_145eef247bfb46b6_base_sql_py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_db_manager_py.html  z_145eef247bfb46b6_hh_api_py.html  z_145eef247bfb46b6_logger_py.html  z_145eef247bfb46b6_sql_database_py.html
src/: base_api.py  base_db.py  base_sql.py  config.py  db_manager.py  hh_api.py  logger.py  sql_database.py
tests/: conftest.py  test_db_manager.py  test_hh_api.py  test_sql_database.py
